# cguard

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Doxyfile.in  README.md
.github/workflows/: ci.yml
app/: main.cc
cmake/: Asio.cmake  Misc.cmake
include/: crownguard.h  fcrownguard.h  server.h
tests/: CMakeLists.txt  dummy.cc  main.cc
